# rocky-uniaxc

./: .gitignore  README.md  compr_meshgen.py  compression_rocky.py  mkdocs.yml  params.json  postproc.ipynb  preproc.ipynb  pyproject.toml  rocky_sweep.py  script_uniax.py  sweep_analysis.py  utils.py
.github/workflows/: ci.yml  deploy-docs.yml  python-publish.yml
docs/: api.md  cli.md  examples.md  getting_started.md  index.md
json/: ofat_base.json  sweep_reg.json
meshes/: insert_base.stl  insert_inlet.stl  insert_support1.stl  insert_support2.stl  square_wall_negZ.stl  square_wall_posZ.stl
packing3d/: __init__.py  cartesian.py  cylindrical.py  geometry.py  mesh.py  utils.py
packing3d/examples/: examples.py
prototyping/: example_ofat.py
prototyping/json/: ofat_base.json  sweep_reg.json
pyuniaxc/: __init__.py  compr_meshgen.py  externals.py  pyproject.toml  rocky_doe.py  rocky_sweep.py  sweep_analysis.py  utils.py
pyuniaxc/doe/: __init__.py  ofat.py  sobol.py  sweep.py
pyuniaxc/templates/: template_uniax.py
src/: __init__.py  particles_shapes.py  pyrocky.py  utils.py
src/doe/: __init__.py  med.py  ofat.py  sobol.py  sweep.py
src/rocky_uniaxc/: __init__.py  case_runner.py  compr_meshgen.py  externals.py  particles_shapes.py  pyrocky.py  sweep_analysis.py  utils.py
src/rocky_uniaxc/doe/: __init__.py  _doe_utils.py  di_optimal.py  ofat.py  space_filling.py  sweep.py
src/rocky_uniaxc/doe/med/: __init__.py  _med_wrapper.py  med_launcher.py
src/rocky_uniaxc/pyrocky/: __init__.py  helpers.py  uniax.py
src/rocky_uniaxc/templates/: template_uniax.py
src/templates/: template_uniax.py
templates/: template_uniax.py
tests/: conftest.py  test_di_optimal.py  test_doe_utils.py  test_ofat.py  test_space_filling.py  test_sweep.py  test_sweep_analysis.py  test_utils.py
