[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project]
name = "rocky-uniaxc"
authors = [{ name = "Abhirup Roy", email = "axr154@bham.ac.uk" }]
maintainers = [{ name = "Abhirup Roy", email = "axr154@bham.ac.uk" }]
version = "0.1.0"
description = "Toolkit for multiscale uniaxial compression simulations in Ansys Rocky"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "ansys-rocky-core<=0.3",
    "gmsh>=4.15.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "numpy-stl>=3.2.0",
    "pandas>=2.3.3",
    "pyevtk>=1.6.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Pharmaceuticals",
]

[project.urls]
Repository = "https://github.com/abhiruproy/rocky-uniaxc"

[tool.ruff]
per-file-ignores = { "src/templates/*" = ["F821"] }

[tool.uv.sources]
medeq = { git = "https://github.com/uob-positron-imaging-centre/MED.git" }

[project.license]
text = "MIT"

[tool.setuptools.package-data]
rocky_uniaxc = ["py.typed"]
