[project]
name = "pyuniaxc"
version = "0.1.0"
description = "Toolkit for multiscale uniaxial compression simulations Ansys Rocky"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gmsh>=4.14.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
]
